@@ -1,6 +1,9 @@
 package es.tid.bgp.bgp4.objects;
 
+import java.util.Arrays;
+
 import es.tid.bgp.bgp4.BGP4Element;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -15,13 +18,38 @@ public abstract class BGP4Object implements BGP4Element {
 	public byte[] getBytes() {
 		return bytes;
 	}
-	public void setBytes(byte[] bytes) {
+	protected void setBytes(byte[] bytes) {
 		this.bytes = bytes;
 	}
 	public int getLength() {
 		return length;
 	}
-	public void setLength(int length) {
+	protected void setLength(int length) {
 		this.length = length;
 	}
+	@Override
+	public int hashCode() {
+		final int prime = 31;
+		int result = 1;
+		result = prime * result + Arrays.hashCode(bytes);
+		result = prime * result + length;
+		return result;
+	}
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj)
+			return true;
+		if (obj == null)
+			return false;
+		if (getClass() != obj.getClass())
+			return false;
+		BGP4Object other = (BGP4Object) obj;
+		if (!Arrays.equals(bytes, other.bytes))
+			return false;
+		if (length != other.length)
+			return false;
+		return true;
+	}
+	
+	
 }
