@@ -1,0 +1,10 @@
+package es.tid.tests;
+
+public class TestBGPLSMessages {
+	
+	@org.junit.Test
+	public void testBGPLSOpen (){
+		
+	}
+
+}
