@@ -4,6 +4,8 @@ v1.2.1
 - Added coding of REQ_ADAP_CAP from draft-ietf-pce-gmpls-pcep-extensions-11
 - Deleted old SRERO objects (no longer used)
 - Added encoding of REQ_MISSING_TLV
+- BGP-LS Path Attribute: Next Hop Address IPv4 encoding added
+- Update to https://tools.ietf.org/html/draft-ietf-pce-segment-routing-06
 - Bugfixes 
 v1.2
 - Added JUnit tests for PCEP (still to be fully completed)
